--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
 	"name": "iqnection-modules/linkfield",
 	"description": "SilverStripe Link Field",
 	"type": "silverstripe-module",
-	"keywords": ["iqnection","pages"],
+	"keywords": ["iqnection","module"],
 	"license": "BSD-3-Clause",
 	"authors": [
 		{
