--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,18 @@
 		}
 	],
 	"require": {
-		"silverstripe/framework": "4.*"
+		"silverstripe/framework": "^4.1"
 	},
 	"extra": {
-		"installer-name": "iq-linkfield"
+		"expose": [
+			"css",
+			"javascript"
+		]
+	},
+	"autoload": {
+		"psr-4": {
+			"IQnection\\Forms\\": "app/src/",
+			"IQnection\\ORM\\": "app/src/"
+		}
 	}
 }
